# omnomnomicon

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: check-and-lint.yaml
examples/: rustyline.rs  tui.rs
fuzz/: Cargo.toml
fuzz/benches/: bench.rs
fuzz/examples/: rustyline_ext.rs
omnomnomicon/: Cargo.toml
omnomnomicon/examples/: rustyline.rs
omnomnomicon/src/: chrono.rs  combinators.rs  complete.rs  decorators.rs  lib.rs  parsers.rs  state.rs  tests.rs  tutorial.rs  updater.rs
omnomnomicon/src/combinators/: choice.rs  permutate.rs  pwords.rs  sequence.rs
omnomnomicon/src/frontend/: mod.rs  rustyline.rs
omnomnomicon_derive/: Cargo.toml
omnomnomicon_derive/src/: lib.rs  parser.rs  patch.rs  tools.rs  updater.rs
src/: chrono.rs  combinators.rs  complete.rs  decorators.rs  editor.rs  lib.rs  macros.rs  parsers.rs  patch.rs  prelude.rs  state.rs  tests.rs  tutorial.rs  updater.rs  utils.rs
src/combinators/: choice.rs  permutate.rs  pwords.rs  sequence.rs
src/frontend/: mod.rs  rustyline.rs  tui.rs
tests/: Cargo.toml  FUZZING.md  patch.rs
tests/benches/: bench.rs
tests/examples/: rustyline_ext.rs
tests/src/: lib.rs
