[package]
name = "omnomnomicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { version = "0.12", optional = true }
bitflags = "1.3"
chrono = { version = "0.4", optional = true }
enum-map = { version = "1.1", default-features = false, optional = true }
lexical-core = { version = "0.8", default-features = false, features=["std", "parse-integers", "parse-floats"] }
omnomnomicon_derive = { path = "./omnomnomicon_derive" }
rustyline = { version = "9.0", default-features = false, optional = true }
smallvec = { version = "1.6", features=["union"] }

[dev-dependencies]
omnomnomicon = { path = ".", features=["all"] }

[features]
default = []
tutorial = []
sanity = []
frontend_rustyline = ["ansi_term", "rustyline"]
all = ["tutorial", "frontend_rustyline", "sanity", "enum-map", "chrono"]
debug = []

[[example]]
name = "rustyline"


[workspace]
members = [
    ".",
    "omnomnomicon_derive",
    "fuzz",
]


[package.metadata.docs.rs]
features = ["all"]
