[package]
name = "omnomnomicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0"
chrono = { version = "0.4", optional = true }
enum-map = { version = "2.0.2", default-features = false, optional = true }
lexical-core = { version = "0.8", default-features = false, features=["std", "parse-integers", "parse-floats"] }
omnomnomicon_derive = { path = "./omnomnomicon_derive" }
smallvec = { version = "1.6", features=["union"] }
tui = { version = "0.19.0", optional = true }
crossterm = { version = "0.25.0", optional = true }
unicode-segmentation = "1.9"

[dev-dependencies]
omnomnomicon = { path = ".", features=["all"] }

[features]
default = ["chrono", "enum-map", "frontend_tui"]
tutorial = []
sanity = []
frontend_tui = ["tui", "crossterm"]
all = ["tutorial", "frontend_tui", "sanity", "enum-map", "chrono"]
debug = []

[[example]]
name = "tui"


[workspace]
members = [
    ".",
    "omnomnomicon_derive",
]


[package.metadata.docs.rs]
features = ["all"]
