[package]
name = "omnomnomicon_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { version = "0.12", optional = true }
honggfuzz = { version = "0.5", optional = true }
rustyline = { version = "9.0", default-features = false, optional = true }
enum-map = { version = "1.1", default-features = false }
lexical-core = { version = "0.8", default-features = false, features=[ "std", "parse-integers", "parse-floats"] }
smallvec = { version = "1.6", features=["union"] }
omnomnomicon = { path = "../omnomnomicon", features=["tutorial", "frontend_rustyline", "sanity", "enum-map", "chrono"] }
chrono = { version = "0.4" }

[dev-dependencies]
criterion = { version = "0.3", features=["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "fuzz"
path = "bin/fuzz.rs"
required-features = ["honggfuzz"]

[[example]]
name = "rustyline_ext"
required-features = ["rustyline"]


